--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             </div>
             <div class="header__menu">
               <ul class="header__menu-list">
-                <li class="header__menu-item"><a href="#skills">Skills</a></li>
-                <li class="header__menu-item">
+                <li class="header__menu-item" data-i18="skills"><a href="#skills">Skills</a></li>
+                <li class="header__menu-item" data-i18="portfolio">
                   <a href="#portfolio">Portfolio</a>
                 </li>
-                <li class="header__menu-item"><a href="#video">Video</a></li>
-                <li class="header__menu-item"><a href="#price">Price</a></li>
-                <li class="header__menu-item">
+                <li class="header__menu-item" data-i18="video"><a href="#video">Video</a></li>
+                <li class="header__menu-item" data-i18="price"><a href="#price">Price</a></li>
+                <li class="header__menu-item" data-i18="contacts">
                   <a href="#contacts">Contacts</a>
                 </li>
               </ul>
@@ -55,15 +55,15 @@
             </div>
           </section>
           <section class="header__title">
-            <div class="header__title-name"><h1>Alexa Rise</h1></div>
-            <div class="header__title-info">
+            <div class="header__title-name" data-i18="hero-title"><h1>Alexa Rise</h1></div>
+            <div class="header__title-info" data-i18="hero-text">
               <p>
                 Save sincere emotions, romantic feelings and happy moments of
                 life together with professional photographer Alexa Rise
               </p>
             </div>
             <div class="header__title-btn">
-              <button class="header__title-btnHire">Hire me</button>
+              <button class="header__title-btnHire" data-i18="hire">Hire me</button>
             </div>
           </section>
         </div>
@@ -71,16 +71,16 @@
       <main class="main">
         <div class="container">
           <section class="skills">
-            <div class="skills__title title" id="skills">Skills</div>
+            <div class="skills__title title" id="skills" data-i18="">Skills</div>
             <div class="skills__content">
               <div class="skills__item">
                 <div class="skills__item-img">
                   <img src="./images/icons/camera.svg" alt="icon" />
                 </div>
-                <div class="skills__item-name">
+                <div class="skills__item-name" data-i18="skill-title-1">
                   <h3>Digital photography</h3>
                 </div>
-                <div class="skills__item-info">
+                <div class="skills__item-info" data-i18="skill-text-1">
                   <p>High-quality photos in the studio and on the nature</p>
                 </div>
               </div>
@@ -88,8 +88,8 @@
                 <div class="skills__item-img">
                   <img src="./images/icons/video.svg" alt="icon" srcset="" />
                 </div>
-                <div class="skills__item-name"><h3>Video shooting</h3></div>
-                <div class="skills__item-info">
+                <div class="skills__item-name" data-i18="skill-title-2"><h3>Video shooting</h3></div>
+                <div class="skills__item-info" data-i18="skill-text-2">
                   <p>Capture your moments so that they always stay with you</p>
                 </div>
               </div>
@@ -97,8 +97,8 @@
                 <div class="skills__item-img">
                   <img src="./images/icons/image.svg" alt="icon" srcset="" />
                 </div>
-                <div class="skills__item-name"><h3>Retouch</h3></div>
-                <div class="skills__item-info">
+                <div class="skills__item-name" data-i18="skill-title-3"><h3>Retouch</h3></div>
+                <div class="skills__item-info" data-i18="skill-text-3">
                   <p>I strive to make photography surpass reality</p>
                 </div>
               </div>
@@ -106,8 +106,8 @@
                 <div class="skills__item-img">
                   <img src="./images/icons/mic.svg" alt="icon" srcset="" />
                 </div>
-                <div class="skills__item-name"><h3>Audio</h3></div>
-                <div class="skills__item-info">
+                <div class="skills__item-name" data-i18="skill-title-4"><h3>Audio</h3></div>
+                <div class="skills__item-info" data-i18="skill-text-4">
                   <p>
                     Professional sounds recording for video, advertising,
                     portfolio
@@ -117,12 +117,12 @@
             </div>
           </section>
           <section class="portfolio" id="portfolio">
-            <div class="portfolio__title title">Portfolio</div>
+            <div class="portfolio__title title" data-i18="portfolio">Portfolio</div>
             <div class="portfolio__seasons">
-              <button class="portfolio__seasons-btn" data-season="winter">Winter</button>
-              <button class="portfolio__seasons-btn" data-season="spring">Spring</button>
-              <button class="portfolio__seasons-btn" data-season="summer">Summer</button>
-              <button class="portfolio__seasons-btn active" data-season="autumn">Autumn</button>
+              <button class="portfolio__seasons-btn" data-season="winter" data-i18="winter">Winter</button>
+              <button class="portfolio__seasons-btn" data-season="spring" data-i18="spring">Spring</button>
+              <button class="portfolio__seasons-btn" data-season="summer" data-i18="summer">Summer</button>
+              <button class="portfolio__seasons-btn active" data-season="autumn" data-i18="autumn">Autumn</button>
             </div>
             <div class="portfolio__gallary">
               <img src="./images/autumn/1.jpg"  class="portfolio-img"/>
@@ -134,7 +134,7 @@
             </div>
           </section>
           <section class="video">
-            <div class="video__title title" id="video">Video</div>
+            <div class="video__title title" id="video" data-i18="video">Video</div>
             <div class="video__pleer">
               <div class="video__pleer-img">
                 <img src="./images/video-player.jpg" alt="" />
@@ -172,91 +172,91 @@
             </div>
           </section>
           <section class="price">
-            <div class="price__title title" id="price">Price</div>
+            <div class="price__title title" id="price" data-i18="price">Price</div>
             <div class="price__content">
               <div class="price__content-item">
-                <div class="price__content-item-name">Standard</div>
-                <div class="price__content-item-price">500 $</div>
+                <div class="price__content-item-name" data-i18="">Standard</div>
+                <div class="price__content-item-price" data-i18="">500 $</div>
                 <div class="price__content-item-info">
                   <ul class="price__content-item-info-list">
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-1-span-1">
                       One location
                     </li>
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-1-span-2">
                       120 photos in color
                     </li>
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-1-span-3">
                       12 photos in retouch
                     </li>
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-1-span-4">
                       Readiness 2-3 weeks
                     </li>
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-1-span-5">
                       Make up, visage
                     </li>
                   </ul>
                 </div>
                 <div class="price__content-item-btn">
-                  <button class="price__btn">Order shooting</button>
+                  <button class="price__btn" data-i18="order">Order shooting</button>
                 </div>
               </div>
               <div class="price__content-item">
-                <div class="price__content-item-name">Premium</div>
-                <div class="price__content-item-price">700 $</div>
+                <div class="price__content-item-name" data-i18="">Premium</div>
+                <div class="price__content-item-price" data-i18="">700 $</div>
                 <div class="price__content-item-info">
                   <ul class="price__content-item-info-list">
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-2-span-1">
                       One or two locations
                     </li>
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-2-span-2">
                       200 photos in color
                     </li>
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-2-span-3">
                       20 photos in retouch
                     </li>
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-2-span-4">
                       Readiness 1-2 weeks
                     </li>
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-2-span-5">
                       Make up, visage
                     </li>
                   </ul>
                 </div>
                 <div class="price__content-item-btn">
-                  <button class="price__btn">Order shooting</button>
+                  <button class="price__btn" data-i18="order">Order shooting</button>
                 </div>
               </div>
               <div class="price__content-item">
-                <div class="price__content-item-name">Gold</div>
-                <div class="price__content-item-price">1000 $</div>
+                <div class="price__content-item-name" data-i18="">Gold</div>
+                <div class="price__content-item-price" data-i18="">1000 $</div>
                 <div class="price__content-item-info">
                   <ul class="price__content-item-info-list">
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-3-span-1">
                       Three locations or more
                     </li>
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-3-span-2">
                       300 photos in color
                     </li>
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-3-span-3">
                       50 photos in retouch
                     </li>
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-3-span-4">
                       Readiness 1 week
                     </li>
-                    <li class="price__content-item-info-list-li">
+                    <li class="price__content-item-info-list-li" data-i18="price-description-3-span-5">
                       Make up, visage, hairstyle
                     </li>
                   </ul>
                 </div>
                 <div class="price__content-item-btn">
-                  <button class="price__btn">Order shooting</button>
+                  <button class="price__btn" data-i18="order">Order shooting</button>
                 </div>
               </div>
             </div>
           </section>
           <section class="contacts" id="contacts">
             <div class="contacts__feedback">
-              <div class="contacts__feedback-name"><h3>Contact me</h3></div>
+              <div class="contacts__feedback-name" data-i18="contact-me"><h3>Contact me</h3></div>
               <form action="#" class="contacts__feedback-form">
                 <input
                   type="email"
@@ -273,7 +273,7 @@
                   class="contacts__feedback-text"
                   placeholder="Message"
                 ></textarea>
-                <button class="contacts__feedback-btn">Send message</button>
+                <button class="contacts__feedback-btn" data-i18="send-message">Send message</button>
               </form>
             </div>
           </section>
