--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </li>
               </ul>
               <div class="header__menu-language">
-                <span class="english">en</span> / <span class="ru">ru</span>
+                <span class="en check">en</span> / <span class="ru">ru</span>
               </div>
               <div class="dropdown">
                 <div
@@ -55,9 +55,9 @@
             </div>
           </section>
           <section class="header__title">
-            <div class="header__title-name" data-i18="hero-title"><h1>Alexa Rise</h1></div>
-            <div class="header__title-info" data-i18="hero-text">
-              <p>
+            <div class="header__title-name" ><h1 data-i18="hero-title">Alexa Rise</h1></div>
+            <div class="header__title-info" >
+              <p data-i18="hero-text">
                 Save sincere emotions, romantic feelings and happy moments of
                 life together with professional photographer Alexa Rise
               </p>
@@ -77,38 +77,38 @@
                 <div class="skills__item-img">
                   <img src="./images/icons/camera.svg" alt="icon" />
                 </div>
-                <div class="skills__item-name" data-i18="skill-title-1">
-                  <h3>Digital photography</h3>
+                <div class="skills__item-name" >
+                  <h3 data-i18="skill-title-1">Digital photography</h3>
                 </div>
-                <div class="skills__item-info" data-i18="skill-text-1">
-                  <p>High-quality photos in the studio and on the nature</p>
+                <div class="skills__item-info" >
+                  <p data-i18="skill-text-1">High-quality photos in the studio and on the nature</p>
                 </div>
               </div>
               <div class="skills__item">
                 <div class="skills__item-img">
                   <img src="./images/icons/video.svg" alt="icon" srcset="" />
                 </div>
-                <div class="skills__item-name" data-i18="skill-title-2"><h3>Video shooting</h3></div>
-                <div class="skills__item-info" data-i18="skill-text-2">
-                  <p>Capture your moments so that they always stay with you</p>
+                <div class="skills__item-name" ><h3 data-i18="skill-title-2">Video shooting</h3></div>
+                <div class="skills__item-info" >
+                  <p data-i18="skill-text-2">Capture your moments so that they always stay with you</p>
                 </div>
               </div>
               <div class="skills__item">
                 <div class="skills__item-img">
                   <img src="./images/icons/image.svg" alt="icon" srcset="" />
                 </div>
-                <div class="skills__item-name" data-i18="skill-title-3"><h3>Retouch</h3></div>
-                <div class="skills__item-info" data-i18="skill-text-3">
-                  <p>I strive to make photography surpass reality</p>
+                <div class="skills__item-name" ><h3 data-i18="skill-title-3">Retouch</h3></div>
+                <div class="skills__item-info" >
+                  <p data-i18="skill-text-3">I strive to make photography surpass reality</p>
                 </div>
               </div>
               <div class="skills__item">
                 <div class="skills__item-img">
                   <img src="./images/icons/mic.svg" alt="icon" srcset="" />
                 </div>
-                <div class="skills__item-name" data-i18="skill-title-4"><h3>Audio</h3></div>
-                <div class="skills__item-info" data-i18="skill-text-4">
-                  <p>
+                <div class="skills__item-name" ><h3 data-i18="skill-title-4">Audio</h3></div>
+                <div class="skills__item-info" >
+                  <p data-i18="skill-text-4">
                     Professional sounds recording for video, advertising,
                     portfolio
                   </p>
@@ -256,7 +256,7 @@
           </section>
           <section class="contacts" id="contacts">
             <div class="contacts__feedback">
-              <div class="contacts__feedback-name" data-i18="contact-me"><h3>Contact me</h3></div>
+              <div class="contacts__feedback-name" ><h3 data-i18="contact-me">Contact me</h3></div>
               <form action="#" class="contacts__feedback-form">
                 <input
                   type="email"
@@ -362,6 +362,6 @@
         </div>
       </footer>
     </div>
-    <script src="./js/script.js"></script>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
