--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <main class="main">
         <div class="container">
           <section class="skills">
-            <div class="skills__title title" id="skills" data-i18="">Skills</div>
+            <div class="skills__title title" id="skills" data-i18="skills">Skills</div>
             <div class="skills__content">
               <div class="skills__item">
                 <div class="skills__item-img">
