--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="price__title title" id="price" data-i18="price">Price</div>
             <div class="price__content">
               <div class="price__content-item">
-                <div class="price__content-item-name" data-i18="">Standard</div>
+                <div class="price__content-item-name" data-i18="standart">Standard</div>
                 <div class="price__content-item-price" data-i18="">500 $</div>
                 <div class="price__content-item-info">
                   <ul class="price__content-item-info-list">
@@ -201,7 +201,7 @@
                 </div>
               </div>
               <div class="price__content-item">
-                <div class="price__content-item-name" data-i18="">Premium</div>
+                <div class="price__content-item-name" data-i18="premium">Premium</div>
                 <div class="price__content-item-price" data-i18="">700 $</div>
                 <div class="price__content-item-info">
                   <ul class="price__content-item-info-list">
@@ -227,7 +227,7 @@
                 </div>
               </div>
               <div class="price__content-item">
-                <div class="price__content-item-name" data-i18="">Gold</div>
+                <div class="price__content-item-name" data-i18="gold">Gold</div>
                 <div class="price__content-item-price" data-i18="">1000 $</div>
                 <div class="price__content-item-info">
                   <ul class="price__content-item-info-list">
