fix Html&Css with perfectPixel

--- a/index.html
+++ b/index.html
@@ -254,7 +254,9 @@
               </div>
             </div>
           </section>
+        </div>
           <section class="contacts" id="contacts">
+            <div class="container">
             <div class="contacts__feedback">
               <div class="contacts__feedback-name" ><h3 data-i18="contact-me">Contact me</h3></div>
               <form action="#" class="contacts__feedback-form">
@@ -276,9 +278,11 @@
                 <button class="contacts__feedback-btn" data-i18="send-message">Send message</button>
               </form>
             </div>
+          </div>
           </section>
-        </div>
+       
       </main>
+      <div class="container">
       <footer class="footer">
         <div class="footer__left">
           <p>©</p>
@@ -361,6 +365,7 @@
           </ul>
         </div>
       </footer>
+      </div>
     </div>
     <script type="module" src="./js/script.js"></script>
   </body>
